--- a/src/app/pages/tabs/add/add.page.html
+++ b/src/app/pages/tabs/add/add.page.html
@@ -43,6 +43,11 @@
       <ion-label position="floating">Club</ion-label>
       <ion-input type="text" [(ngModel)]="club"></ion-input>
     </ion-item>
+    <ion-item>
+      <ion-label position="floating">Upload Image</ion-label>
+      <ion-input type="file" (change)="onImageSelected($event)"></ion-input>
+    </ion-item>
+    <ion-img [src]="selectedImage"></ion-img>
   </ion-list>
   <ion-button expand="full" (click)="onSubmit()">Submit</ion-button>
 </ion-content>
