--- a/src/app/pages/tabs/add/add.page.html
+++ b/src/app/pages/tabs/add/add.page.html
@@ -11,44 +11,54 @@
 
 <ion-content>
   <ion-list>
+
     <ion-item>
-      <ion-label position="stacked">First Name</ion-label>
-      <ion-input type="text" [(ngModel)]="firstname"></ion-input>
+      <ion-label position="floating">First Name</ion-label>
+      <ion-input [(ngModel)]="firstName" name="firstName"></ion-input>
     </ion-item>
+
     <ion-item>
-      <ion-label position="stacked">Last Name</ion-label>
-      <ion-input type="text" [(ngModel)]="lastname"></ion-input>
+      <ion-label position="floating">Last Name</ion-label>
+      <ion-input [(ngModel)]="lastName" name="lastName"></ion-input>
     </ion-item>
+
     <ion-item>
-      <ion-label position="stacked">Date of Birth</ion-label>
-      <ion-input type="date" [(ngModel)]="dob"></ion-input>
+      <ion-label position="floating">Date of Birth</ion-label>
+      <ion-input type="Date" [(ngModel)]="dob" name="dob"></ion-input>
     </ion-item>
+
     <ion-item>
-      <ion-label position="stacked">Position</ion-label>
-      <ion-input type="text" [(ngModel)]="position"></ion-input>
+      <ion-label position="floating">Position</ion-label>
+      <ion-input [(ngModel)]="position" name="position"></ion-input>
     </ion-item>
+
     <ion-item>
-      <ion-label position="stacked">Total Wins</ion-label>
-      <ion-input type="number" [(ngModel)]="totalWins"></ion-input>
+      <ion-label position="floating">Total Wins</ion-label>
+      <ion-input type="number" [(ngModel)]="totalWins" name="totalWins"></ion-input>
     </ion-item>
+
     <ion-item>
-      <ion-label position="stacked">Total Matches</ion-label>
-      <ion-input type="number" [(ngModel)]="totalMatches"></ion-input>
+      <ion-label position="floating">Total Matches</ion-label>
+      <ion-input type="number" [(ngModel)]="totalMatches" name="totalMatches"></ion-input>
     </ion-item>
+
     <ion-item>
-      <ion-label position="stacked">Jersey</ion-label>
-      <ion-input type="text" [(ngModel)]="jersey"></ion-input>
+      <ion-label position="floating">Jersey Number</ion-label>
+      <ion-input type="number" [(ngModel)]="jersey" name="jersey"></ion-input>
     </ion-item>
+
     <ion-item>
       <ion-label position="floating">Club</ion-label>
-      <ion-input type="text" [(ngModel)]="club"></ion-input>
+      <ion-input [(ngModel)]="club" name="club"></ion-input>
     </ion-item>
+    
     <ion-item>
-      <ion-label position="floating">Upload Image</ion-label>
-      <ion-input type="file" (change)="onImageSelected($event)"></ion-input>
+      <ion-label>Profile Picture</ion-label>
+      <input type="file" (change)="onFileSelected($event)" accept="image/*">
     </ion-item>
     <ion-img [src]="selectedImage"></ion-img>
   </ion-list>
-  <ion-button expand="full" (click)="onSubmit()">Submit</ion-button>
+
+  <ion-button expand="full" (click)="saveData()">Save</ion-button>
 </ion-content>
 
