toaster for add page

--- a/src/app/pages/tabs/add/add.page.html
+++ b/src/app/pages/tabs/add/add.page.html
@@ -59,6 +59,7 @@
     <ion-img [src]="selectedImage"></ion-img>
   </ion-list>
 
-  <ion-button expand="full" (click)="saveData()">Save</ion-button>
+  <ion-button expand="full" (click)="saveData()" (click)="showToast()">Save</ion-button>
+
 </ion-content>
 
