--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -10,7 +10,7 @@
       <ion-label>ADD</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="group">
+    <ion-tab-button tab="team-list">
       <ion-icon name="people-outline"></ion-icon>
       <ion-label>LIST</ion-label>
     </ion-tab-button>
